# PRIMoRDiA1.0v

./: CMakeLists.txt  PRIMoRDIA_1.0v_LINUX64  PRIMoRDiA_1.0v  PRIMoRDiA_1.0v_LINUX64  PRIMoRDiA_1.25v  PRIMoRDiA_1.25v_LINUX64  PRIMoRDiA_1.2v_LINUX64  Tutorial_PRIMoRDiA_Colab.ipynb  bib_userguide.bib  readme.md  user_guide.tex
Compiled_Binaries/: PRIMoRDiA_1.25v_LINUX64
Tutorials_Files/Tutorial_1/: primordia_edit.input
WIN64/: CMakeLists.txt
WIN64/include/: Iaorbital.h  Iatom.h  Ibuffer.h  Icube.h  Iline.h  Imolecule.h  Iprotein.h  Itimer.h  QMdriver.h  QMparser.h  ReactionAnalysis.h  autoprimordia.h  common.h  gamess_files.h  gaussian_files.h  gridgen.h  interface.h  local_rd.h  local_rd_cnd.h  log_class.h  mopac_files.h  orca_files.h  pair_rd.h  primordia.h  reaction_coord.h  residue_lrd.h  scripts.h  test_p.h
WIN64/src/: Iaorbital.cpp  Iatom.cpp  Ibuffer.cpp  Icube.cpp  Iline.cpp  Imolecule.cpp  Iprotein.cpp  QMdriver.cpp  QMparser.cpp  ReactionAnalysis.cpp  autoprimordia.cpp  common.cpp  gamess_files.cpp  gaussian_files.cpp  global_rd.cpp  gridgen.cpp  interface.cpp  local_rd.cpp  local_rd_cnd.cpp  log_class.cpp  mopac_files.cpp  orca_files.cpp  pair_rd.cpp  pos_traj.cpp  primordia.cpp  reaction_coord.cpp  residue_lrd.cpp  scripts.cpp  test_p.cpp
data_test/: acrolein.aux  acrolein_an.out  acrolein_orca_cat.out  aldeide.xyz  benzene.aux  metano_an.inp  metano_cat.inp
include/: Iatom.h  Ibuffer.h  Icube.h  Imolecule.h  Iprotein.h  Itimer.h  common.h  comp_hardness.h  gamess_files.h  gaussian_files.h  global_rd.h  gridgen.h  interface.h  local_rd.h  local_rd_cnd.h  mopac_files.h  orca_files.h  pair_rd.h  pos_traj.h  primordia.h  residue_lrd.h  scripts.h  test_p.h
source/src/: main.cpp  (+11 more)
src/: Iaorbital.cpp  Ibuffer.cpp  Icube.cpp  Iline.cpp  Imolecule.cpp  Iprotein.cpp  Itimer.cpp  QMdriver.cpp  QMparser.cpp  autoprimordia.cpp  common.cpp  comp_hardness.cpp  gamess_files.cpp  gaussian_files.cpp  global_rd.cpp  gridgen.cpp  interface.cpp  local_rd.cpp  local_rd_cnd.cpp  log_class.cpp  mopac_files.cpp  orca_files.cpp  pair_rd.cpp  pos_traj.cpp  primordia.cpp  residue_lrd.cpp  scripts.cpp  test_p.cpp
user_guide/: user_guide_1_2PT.tex
(+130 files in other folders)
