cmake_minimum_required (VERSION 3.0)
set(CMAKE_CXX_COMPILER /usr/bin/g++-8)
project (primordia_app)
enable_language (CXX)
include_directories (./include)
file (GLOB SOURCES "src/*.cpp")
add_executable(PRIMoRDiA_1.25v_LINUX64 ${SOURCES})
set (CMAKE_BUILD_TYPE Release)
set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -fopenmp -O3  -std=c++17 -lstdc++fs -I /usr/include/eigen3")
set (CMAKE_CXX_FLAGS_DEBUG "-pg -g -O0 -fopenmp -std=c++17 -I /usr/include/eigen3")
target_link_libraries(PRIMoRDiA_1.25v_LINUX64 -lstdc++fs)
